Fix Table horizontal scroll

--- a/freightbit/src/main/webapp/includes/css/main.css
+++ b/freightbit/src/main/webapp/includes/css/main.css
@@ -4,6 +4,14 @@
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 
+.table-responsive {
+    overflow-x: scroll !important;
+}
+
+.table {
+    width: 1200px !important;
+}
+
 body {
     background: #dfe0e1;
 }
