--- a/freightbit/src/main/webapp/includes/css/mains.css
+++ b/freightbit/src/main/webapp/includes/css/mains.css
@@ -4,6 +4,15 @@
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 
+.table-responsive {
+    overflow-x: scroll !important;
+}
+
+.table {
+    width: 1200px !important;
+    margin: 0 auto !important;
+}
+
 body {
     background: #dfe0e1;
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
